Deployments/probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: default-deploy2
  labels:
    name: default-deploy2
spec:
  replicas: 2
  selector:
    matchLabels:
      ns: default2
  template:
    metadata:
      labels:
        ns: default2
    spec:
      containers:
      - name: king
        image: sreeharshav/rollingupdate:v3
        readinessProbe:
          httpGet:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
